# lilguy

./: .gitignore  .gitmodules  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  index.html  mkdocs.yml
.cargo/: config.toml
.github/workflows/: build.yml  docs.yml  export.yml
api-reference/: index.html
docs/: api-reference.md  examples.md  getting-started.md  index.md
examples/: index.html
files/: app.lua
files/templates/: base.j2  docs.html  index.html  layout.html  not_found.html
getting-started/: index.html
macos/: Distribution.xml  build.sh  conclusion.md  entitlements.plist  welcome.md
macos/Resources/: .gitignore  conclusion.rtf  license.rtf  welcome.rtf
search/: search_index.json
src/: command.rs  database.rs  main.rs  prelude.lua  reload.rs  repl.rs  routes.rs  runtime.rs  schema.sql  template.rs  watch.rs
src/command/: new.rs  query.rs  render.rs  run.rs  serve.rs  shell.rs
src/database/: global.rs
src/runtime/: channel.rs  dump.rs  file.rs  http.rs  macros.rs  mdns.rs  net.rs  os.rs  regex.rs  task.rs
src/runtime/http/: websocket.rs
wix/: main.wxs
