[package]
name = "lilguy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-tempfile = "0.6.0"
axum = "0.7.9"
base64 = "0.22.1"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive", "env"] }
crc32fast = "1.4.2"
dotenv = { version = "0.15.0", features = ["clap"] }
eyre = "0.6.12"
grass = "0.13.4"
minijinja = { version = "2.5.0", features = ["loader", "json", "preserve_order"] }
mlua = { version = "0.10.2", features = ["lua54", "serialize", "send", "async", "vendored"] }
notify = { version = "7.0.0", features = ["serde", "crossbeam-channel"] }
notify-debouncer-full = { version = "0.4.0", features = ["crossbeam-channel", "macos_kqueue", "serde"] }
parking_lot = { version = "0.12.3", features = ["arc_lock", "owning_ref"] }
path-tree = "0.8.2"
prettytable-rs = "0.10.0"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"] }
rust-embed = { version = "8.5.0", features = ["axum", "include-exclude", "interpolate-folder-path", "tokio"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["indexmap", "preserve_order"] }
serde_sqlite_jsonb = "0.1.0"
serde_transmute = "0.1.4"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full", "rt"] }
tokio-util = { version = "0.7.13", features = ["io", "io-util", "rt"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = { version = "0.1.41", features = ["log", "async-await", "log-always"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "parking_lot", "serde"] }
walkdir = "2.5.0"

[build-dependencies]
walkdir = "2.5.0"
