[package]
name = "lilguy"
version = "0.1.3"
edition = "2021"

authors = ["Dylan Hardison <dylan@hardison.net>"]
description = "A simple application server that runs Lua with SQLite, templates and live reload"
homepage = "https://lilguy.app"
repository = "https://github.com/dylanwh/lilguy"
license = "MIT"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[dependencies]
async-tempfile = "0.7.0"
axum = { version = "0.8.4", features = ["http2", "ws"] }
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive", "env"] }
color-eyre = "0.6.5"
colored_json = "5.0.0"
comrak = { version = "0.41.0", features = ["emojis", "shortcodes"] }
cookie = { version = "0.18.1", features = ["signed", "private", "percent-encoding", "key-expansion"] }
crc32fast = "1.5.0"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
eyre = "0.6.12"
futures-util = { version = "0.3.31", features = ["sink"] }
gethostname = "1.0.2"
grass = "0.13.4"
http = "1.3.1"
ignore = "0.4.23"
indexmap = { version = "2.11.0", features = ["serde"] }
mdns-sd = "0.15.0"
mimalloc = "0.1.48"
minijinja = { version = "2.12.0", features = ["loader", "json", "preserve_order"] }
mlua = { version = "0.11.3", features = ["luajit52", "serialize", "send", "async", "vendored"] }
notify = { version = "8.2.0", features = ["serde", "crossbeam-channel"] }
notify-debouncer-full = { version = "0.6.0", features = ["crossbeam-channel", "macos_kqueue", "serde"] }
nu-ansi-term = { version = "0.50.1", features = ["derive_serde_style", "serde"] }
open = "5.3.2"
parking_lot = { version = "0.12.4", features = ["arc_lock" ] }
path-tree = "0.8.3"
prettytable-rs = "0.10.0"
rand = "0.9.2"
reedline = { version = "0.41.0", features = ["external_printer"] }
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = ["brotli", "charset", "cookies", "gzip", "h2", "http2", "json", "macos-system-configuration", "multipart", "rustls-tls", "zstd"] }
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
rust-embed = { version = "8.7.2", features = ["include-exclude", "interpolate-folder-path", "tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["indexmap", "preserve_order"] }
serde_qs = { version = "0.15.0", features = ["axum"] }
serde_sqlite_jsonb = "0.2.1"
serde_transmute = "0.1.4"
serde_urlencoded = "0.7.1"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.21.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full", "rt"] }
tokio-util = { version = "0.7.16", features = ["io", "io-util", "rt"] }
toml = { version = "0.9.5", features = ["preserve_order"] }
tower-http = { version = "0.6.6", features = ["fs", "timeout", "trace"] }
tracing = { version = "0.1.41", features = ["log", "async-await", "log-always"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "parking_lot", "serde"] }
tree-sitter = "0.25.8"
tree-sitter-highlight = "0.25.8"
tree-sitter-lua = "0.2.0"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2.1"

[build-dependencies]
walkdir = "2.5.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.23"

